# MAgent

./: .env.example  .gitignore  ACHIEVEMENT_REPORT.md  FINAL_TEST_REPORT.md  LICENSE  MIGRATION_COMPLETE.md  PROJECT_STATUS.md  README.md  README_PYTHON.md  V1.0_COMPLETION_REPORT.md  config.example.toml  config.toml.template  index.html  main.py  package-lock.json  package.json  requirements.txt  start.bat  start.py  start_production.py  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  启动指南.md
.github/prompts/: design.md  prompt.md  task-list.md
config/: .gitignore  __init__.py  app_config.py
docs/: frontend-completion-report.md  pdf-config.jsonc  pdf-style.css  project-completion-report.md  task-list.md  对比表-一页版.md  评审FAQ.md  评审版-项目说明-初稿.md  评审速览-一页版.md  路演提纲-3分钟.md
scripts/: clarify_smoketest.py  md2pdf.cjs  md2pdf.js
src/: App.css  App.tsx  __init__.py  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: clarifier.rs  critic.rs  critic_new.rs  innovator.rs  innovator_new.rs  mod.rs  summarizer.rs  synthesizer.rs  verifier.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: agent_runtime.rs  data_structures.rs  mod.rs  state_machine.rs
src-tauri/src/storage/: cache.rs  database.rs  mod.rs  vector_store.rs
src-tauri/src/tests/: basic_test.rs  integration_test.rs.backup  integration_test_simple.rs  mod.rs  simple_test.rs
tools/: test_integration.py
ui-prototype/: discussion.html  idea-input.html  index.html  projects.html  settings.html  workspace.html
(+66 files in other folders)
